--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,24 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-</head>
+<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/84B26280-0A4B-1244-BB1E-0B135A5AAD2C/main.js" charset="UTF-8"></script></head>
+
 <body>
   <nav class="navbar">
     <div class="container">
       <div class="navbar-block">
         <div class="navbar__logo">
-          <img src="img/logo.png" alt="логотип">
+          <img src="img/logo.png" alt="logo">
         </div>
         <!-- /.navbar__logo -->
         <div class="navbar__info">
           <div class="navbar__contacts">
-            <span class="navbar__address">Калуга, Москва, МО</span> 
-            <a href="tel:+7(495)42-251-31" class="navbar__phone">+7(495)42-251-31</a>
+            <span class="navbar__address">Калуга, Москва, МО</span>
+            <a href="tel: +7 (495) 42-251-31 " class="navbar__phone">
+              +7 (495) 42-251-31
+            </a>
           </div>
-          <button class="button navbar__button">Позвоните мине</button>
+          <button class="button navbar__button" id="button">Перезвоните мне</button>
         </div>
         <!-- /.navbar__info -->
       </div>
@@ -30,5 +33,94 @@
     <!-- /.container -->
   </nav>
   <!-- /.navbar -->
+
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="hero-block">
+
+          <div class="hero-text">
+            <h1 class="hero-text__title">
+              Внутренняя отделка помещений "под ключ"
+            </h1>
+            <span class="hero-text__subtitle">
+              С гарантией качества, прописанной в договоре
+            </span>
+            <ul class="hero-list">
+              <li class="hero-list__item">
+                <div class="hero-list__image">
+                  <img src="img/hero/clock.png" alt="clock">
+                </div>
+                <span class="hero-list__text">Точно соблюдаем сроки</span>
+              </li>
+              <li class="hero-list__item">
+                <div class="hero-list__image">
+                  <img src="img/hero/calculator.png" alt="calculator">
+                </div>
+                <span class="hero-list__text">Рассчитаем смету на работы и материалы в день обращения</span>
+              </li>
+              <li class="hero-list__item">
+                <div class="hero-list__image">
+                  <img src="img/hero/paint-board.png" alt="paint-board">
+                </div>
+                <span class="hero-list__text">Предложим более 100 вариантов исполнения дизайна Вашего жилья</span>
+              </li>
+            </ul>
+          </div>
+          <!-- /.hero-text -->
+          <div class="hero-image">
+            <img class="hero-image__img" src="img/hero/hero-image.png" alt="Flat-plan">
+          </div>
+          <!-- /.hero-image -->
+        </div>
+        <!-- /.hero-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.hero -->
+    <section class="offer section">
+      <div class="container">
+        <div class="offer-block">
+          <h2 class="section-title offer__title">
+            Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!
+          </h2>
+          <!-- /.section-title -->
+          <span class="section-subtitle offer__subtitle">
+            Оставьте заявку на разработку бесплатного дизайн-макета!
+          </span>
+          <!-- /.section-subtitle -->
+          <form action="#" class="form offer__form">
+            <input type="text" class="input offer__input" placeholder="Ваше имя">
+            <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+            <button class="button offer__button">Получить бесплатный дизайн-проект</button>
+          </form>
+          
+          <div class="offer-information">
+            <span class="offer__left-span">Наш менеджер 
+              перезвонит Вам в течение 60 секунд
+            </span>
+            <span class="offer__right-span">
+                <span class="offer__right-text">или перезвоните нам сами</span>
+                <strong class="offer__right-strong">+7 (495) 42-251-31</strong>
+              </span>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.offer -->
+  </main>
+
+  <div class="modal" id="modal">
+    <div class="modal-dialog">
+      <button class="modal-dialog__close" id="close">&times;</button> 
+      <h4 class="modal-dialog__title">Модальное окно</h4>
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+
+  <script src="js/main.js"></script>
+
 </body>
 </html>
